getuser & createuser docs
